--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="flex flex-col md:flex-row gap-8">
             <div class="md:w-1/2">
                 <div class="bg-white p-6 rounded-lg shadow-md">
-                    <img src="/api/placeholder/600/600" alt="VitaBoost Product Set" class="w-full h-auto rounded-md">
+                    <img src="OIG1.jpg" alt="VitaBoost Product Set" class="w-full h-auto rounded-md">
                 </div>
                 <div class="mt-4 flex space-x-2 overflow-x-auto">
                     <img src="/api/placeholder/80/80" alt="Thumbnail 1" class="w-20 h-20 rounded-md cursor-pointer">
