--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             const messageElement = document.getElementById('form-message');
 
             try {
-                const response = await fetch('YOUR_GOOGLE_SCRIPT_WEB_APP_URL', {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbx_v5j0qSOeSaxE-hqgkfgOvtMLmIRZfCxY6sFapnnhIrgHzwwz0zuLnIbbUdSq4359/exec', {
                     method: 'POST',
                     mode: 'no-cors', // Important for CORS issues
                     headers: {
