--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LONGd - Invest in Your Health</title>
+    <title>LONGd - Premium Longevity Supplements for Optimal Health</title>
+    <meta name="description" content="LONGd offers scientifically-backed health supplements for longevity, performance, and gut health. Invest in your long-term well-being with our premium formulas.">
+    <meta name="keywords" content="LONGd, longevity supplements, health optimization, glycine, potassium, magnesium, gut health, vitamins, fibers">
+    <meta name="author" content="LONGd">
+    <meta property="og:title" content="LONGd - Invest in Your Long-Term Health">
+    <meta property="og:description" content="Discover LONGd's premium health supplements for longevity, performance, and gut health. Optimize your well-being with our scientifically-backed formulas.">
+    <meta property="og:image" content="https://micmer-git.github.io/fortissimo_flow/images/OIG1.jpeg">
+    <meta property="og:url" content="https://micmer-git.github.io/fortissimo_flow/">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="canonical" href="https://micmer-git.github.io/fortissimo_flow/">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -28,6 +37,11 @@
     </style>
 </head>
 <body class="text-gray-800">
+    <header>
+        <nav>
+            <!-- Add navigation menu items here -->
+        </nav>
+    </header>
     <main class="max-w-6xl mx-auto mt-8 px-4">
         <div class="text-center mb-8">
             <h1 class="text-5xl font-bold mb-4 gradient-text">Do your best work with LONGd</h1>
@@ -35,9 +49,9 @@
         </div>
         
         <div class="flex flex-col md:flex-row gap-8">
-            <div class="md:w-1/2">
-                <div class="bg-white p-6 rounded-lg custom-shadow h-full">
-                    <img src="images/OIG1.jpeg" alt="LONGd Product Set" class="w-full h-auto rounded-md">
+            <div class="md:w-1/2 flex justify-center items-center">
+                <div class="bg-white p-6 rounded-lg custom-shadow">
+                    <img src="images/OIG1.jpeg" alt="LONGd Product Set - Premium Longevity Supplements" class="w-full h-auto rounded-md mx-auto" width="500" height="500">
                 </div>
             </div>
             
@@ -110,25 +124,31 @@
         <h2 class="text-4xl font-bold mb-8 text-center gradient-text">The Science Behind LONGd</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <div class="bg-white p-6 rounded-lg custom-shadow hover:shadow-lg transition duration-300">
-                <img src="images/glycine.webp" alt="Glycine" class="w-full h-auto object-cover rounded-lg mb-4">
+                <img src="images/glycine.webp" alt="Glycine - Key Ingredient in LONGd Supplements" class="w-full h-auto object-cover rounded-lg mb-4" width="300" height="200">
                 <h3 class="text-xl font-semibold mb-4 text-[#4facb0]">Glycine for Longevity</h3>
                 <p class="text-gray-600">Recent studies have shown that glycine supplementation may contribute to increased lifespan and healthspan. A 2018 study published in Cell Metabolism found that glycine supplementation extended lifespan in mice.</p>
                 <a href="https://www.sciencedirect.com/science/article/pii/S1568163723000818" class="text-[#5cc6a7] hover:underline mt-2 inline-block">Read more</a>
             </div>
             <div class="bg-white p-6 rounded-lg custom-shadow hover:shadow-lg transition duration-300">
-                <img src="images/minerals.webp" alt="Minerals" class="w-full h-auto object-cover rounded-lg mb-4">
+                <img src="images/minerals.webp" alt="Minerals - Essential Components of LONGd Supplements" class="w-full h-auto object-cover rounded-lg mb-4" width="300" height="200">
                 <h3 class="text-xl font-semibold mb-4 text-[#4facb0]">Minerals for Performance</h3>
                 <p class="text-gray-600">Potassium and Magnesium play crucial roles in muscle function and energy metabolism. A 2017 meta-analysis in the Journal of Human Hypertension found that increased potassium intake was associated with reduced blood pressure.</p>
                 <a href="https://www.sciencedirect.com/science/article/pii/S1568163723000818" class="text-[#5cc6a7] hover:underline mt-2 inline-block">Read more</a>
             </div>
             <div class="bg-white p-6 rounded-lg custom-shadow hover:shadow-lg transition duration-300">
-                <img src="images/gut.webp" alt="Gut Health" class="w-full h-auto object-cover rounded-lg mb-4">
+                <img src="images/gut.webp" alt="Gut Health - A Focus of LONGd Supplements" class="w-full h-auto object-cover rounded-lg mb-4" width="300" height="200">
                 <h3 class="text-xl font-semibold mb-4 text-[#4facb0]">Gut Health and Overall Balance</h3>
                 <p class="text-gray-600">The importance of gut health in overall well-being is increasingly recognized. A 2019 review in the journal Nutrients highlighted the role of dietary fibers in maintaining a healthy gut microbiome and reducing inflammation.</p>
                 <a href="https://www.sciencedirect.com/science/article/pii/S1568163723000818" class="text-[#5cc6a7] hover:underline mt-2 inline-block">Read more</a>
             </div>
         </div>
     </section>
+
+    <footer class="mt-16 bg-gray-100 py-8">
+        <div class="max-w-6xl mx-auto px-4">
+            <!-- Add footer content here -->
+        </div>
+    </footer>
 
     <script>
         document.getElementById('notify-form').addEventListener('submit', async (e) => {
